--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="myApp">
+<html>
 <head>
   <!-- Product card inspiered by https://dribbble.com/shots/3280203-K-2SO-Hot-Toys -->
   <meta charset="utf-8">
@@ -13,13 +13,13 @@
       <img src="img/k2s0.png" alt="">
       <div class="card2">
         <h2>K2-SO</h2>
-        <small>"Captain says you're a friend. I will not kill you."</small>
+        <small>"The captain says you're a friend. I will not kill you."</small>
       </br>
     </br>
     <table>
       <tbody>
         <tr>
-          <td>Lisence</td>
+          <td>License</td>
           <td class="line-right">Star Wars</td>
         </tr>
         <tr>
