--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <!-- Product card inspiered by https://dribbble.com/shots/3280203-K-2SO-Hot-Toys -->
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Product card</title>
   <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
 </head>
